[package]
name = "tokio-async-std"
version = "1.5.3"
authors = [ "Yu-Wei Wu <wusyong9104@gmail.com>" ]
edition = "2018"
license = "MIT"
repository = "https://github.com/wusyong/tokio-async-std"
documentation = "https://docs.rs/tokio-async-std"
description = "An async-std that can fit into tokio ecosystem straight ahead"
keywords = ["async", "await", "future", "std", "task"]
categories = ["asynchronous", "concurrency", "network-programming"]
readme = "README.md"

[lib]
name = "async_std"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = [
  "std",
  "futures-timer",
  "log",
  "mio",
  "mio-uds",
  "num_cpus",
  "pin-project-lite",
  "tokio"
]
docs = ["attributes", "unstable", "default"]
unstable = ["std", "broadcaster", "futures-timer"]
attributes = ["tokio-async-attributes"]
std = [
  "crossbeam-utils",
  "futures-core",
  "futures-io",
  "memchr",
  "once_cell",
  "pin-project-lite",
  "pin-utils",
  "slab",
]

[dependencies]
broadcaster = { version = "1.0.0", optional = true }
crossbeam-utils = { version = "0.7.0", optional = true }
futures-core = { version = "0.3.1", optional = true }
futures-io = { version = "0.3.1", optional = true }
futures-timer = { version = "2.0.2", optional = true }
log = { version = "0.4.8", features = ["kv_unstable"], optional = true }
memchr = { version = "2.3.0", optional = true }
mio = { version = "0.6.19", optional = true }
mio-uds = { version = "0.6.7", optional = true }
num_cpus = { version = "1.11.1", optional = true }
once_cell = { version = "1.2.0", optional = true }
pin-project-lite = { version = "0.1.2", optional = true }
pin-utils = { version = "0.1.0-alpha.4", optional = true }
slab = { version = "0.4.2", optional = true }
tokio = { version = "0.2.18", default-features = false, features = ["blocking", "time", "rt-threaded", "rt-util"], optional = true } 
tokio-async-attributes = { version = "1.0.0", optional = true } 

[dev-dependencies]
femme = "1.3.0"
rand = "0.7.3"
surf = "1.0.3"
tempdir = "0.3.7"
futures = "0.3.1"
tokio = { version = "0.2", features = ["macros"] } 

[[test]]
name = "stream"
required-features = ["unstable"]

[[example]]
name = "tcp-ipv4-and-6-echo"
required-features = ["unstable"]
