[package]
name = "tokio-async-attributes"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "1.0.0"
edition = "2018"
authors = [ "Yu-Wei Wu <wusyong9104@gmail.com>" ]
license = "MIT"
repository = "https://github.com/wusyong/tokio-async-std"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-async-attributes"
description = """
tokio-async-std's proc macros.
"""
categories = ["asynchronous"]

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.3", features = ["full"] }

[dev-dependencies]
tokio-async-std = { version = "1.5.1", features = ["attributes"] }

[package.metadata.docs.rs]
all-features = true
